Fix for fedot notebook

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -3520,17 +3520,18 @@
      "evalue": "'StandardScaler' object is not callable",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\sirau\\OneDrive\\Desktop\\datascience\\covid\\data_analysis.ipynb Ячейка 62\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m info_df_train \u001b[39m=\u001b[39m info_df\u001b[39m.\u001b[39mdrop([\u001b[39m\"\u001b[39m\u001b[39mperiods_stat_fact\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39madmission_date\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlong_observation_tar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39moutcome_tar\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mprocess_stages\u001b[39m\u001b[39m\"\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m info_scal_model \u001b[39m=\u001b[39m StandardScaler()\u001b[39m.\u001b[39mfit(info_df_train)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m X_info \u001b[39m=\u001b[39m info_scal_model(info_scal_model)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'StandardScaler' object is not callable"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32mc:\\Users\\sirau\\OneDrive\\Desktop\\datascience\\covid\\data_analysis.ipynb Ячейка 62\u001B[0m in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m info_df_train \u001B[39m=\u001B[39m info_df\u001B[39m.\u001B[39mdrop([\u001B[39m\"\u001B[39m\u001B[39mperiods_stat_fact\u001B[39m\u001B[39m\"\u001B[39m, \u001B[39m\"\u001B[39m\u001B[39madmission_date\u001B[39m\u001B[39m\"\u001B[39m, \u001B[39m\"\u001B[39m\u001B[39mlong_observation_tar\u001B[39m\u001B[39m\"\u001B[39m, \u001B[39m\"\u001B[39m\u001B[39moutcome_tar\u001B[39m\u001B[39m\"\u001B[39m, \u001B[39m\"\u001B[39m\u001B[39mprocess_stages\u001B[39m\u001B[39m\"\u001B[39m], axis\u001B[39m=\u001B[39m\u001B[39m1\u001B[39m)\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=1'>2</a>\u001B[0m info_scal_model \u001B[39m=\u001B[39m StandardScaler()\u001B[39m.\u001B[39mfit(info_df_train)\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y115sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m X_info \u001B[39m=\u001B[39m info_scal_model(info_scal_model)\n",
+      "\u001B[1;31mTypeError\u001B[0m: 'StandardScaler' object is not callable"
      ]
     }
    ],
    "source": [
-    "info_df_train = info_df.drop([\"periods_stat_fact\", \"admission_date\", \"long_observation_tar\", \"outcome_tar\", \"process_stages\"], axis=1)\n",
-    "info_scal_model = StandardScaler().fit(info_df_train)\n",
-    "X_info = info_scal_model(info_scal_model)"
+    "info_df_train = info_df[\"age_stat_fact\"]\n",
+    "info_df_train = StandardScaler().fit_transform(info_df_train)\n",
+    "medicine_df_train = df.iloc[:, :29]\n",
+    "dinam_control_df"
    ]
   },
   {
@@ -3543,10 +3544,10 @@
      "evalue": "name 'Input' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\sirau\\OneDrive\\Desktop\\datascience\\covid\\data_analysis.ipynb Ячейка 63\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m BATCH_SIZE \u001b[39m=\u001b[39m \u001b[39m12\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m input_static \u001b[39m=\u001b[39m Input((\u001b[39m1\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m input_dinamic \u001b[39m=\u001b[39m Input((\u001b[39m3\u001b[39m, \u001b[39m13\u001b[39m), batch_size\u001b[39m=\u001b[39mBATCH_SIZE)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m dl \u001b[39m=\u001b[39m Dense()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Input' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32mc:\\Users\\sirau\\OneDrive\\Desktop\\datascience\\covid\\data_analysis.ipynb Ячейка 63\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m BATCH_SIZE \u001B[39m=\u001B[39m \u001B[39m12\u001B[39m\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001B[0m input_static \u001B[39m=\u001B[39m Input((\u001B[39m1\u001B[39m))\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m input_dinamic \u001B[39m=\u001B[39m Input((\u001B[39m3\u001B[39m, \u001B[39m13\u001B[39m), batch_size\u001B[39m=\u001B[39mBATCH_SIZE)\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sirau/OneDrive/Desktop/datascience/covid/data_analysis.ipynb#Y116sZmlsZQ%3D%3D?line=3'>4</a>\u001B[0m dl \u001B[39m=\u001B[39m Dense()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Input' is not defined"
      ]
     }
    ],
@@ -3567,108 +3568,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use AutoML Framework Fedot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fedot\n",
-    "from fedot import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Here we define which task should we use, here we also define two main forecast length\n",
-    "task = Task(TaskTypesEnum.ts_forecasting,\n",
-    "            TsForecastingParams(forecast_length=len_forecast))\n",
-    "\n",
-    "# Prepare data to train the model\n",
-    "train_input = InputData(idx=np.arange(0, len(train_data)),\n",
-    "                        features=train_data,\n",
-    "                        target=train_data,\n",
-    "                        task=task,\n",
-    "                        data_type=DataTypesEnum.ts)\n",
-    "\n",
-    "# Prepare input data for prediction part\n",
-    "start_forecast = len(train_data)\n",
-    "end_forecast = start_forecast + len_forecast\n",
-    "# Create forecast indices \n",
-    "forecast_idx = np.arange(start_forecast, end_forecast)\n",
-    "predict_input = InputData(idx=forecast_idx,\n",
-    "                          features=train_data,\n",
-    "                          target=test_data,\n",
-    "                          task=task,\n",
-    "                          data_type=DataTypesEnum.ts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " Create a pipeline\n",
-    "# lagged -> ridge \n",
-    "node_lagged = PrimaryNode('lagged')\n",
-    "node_ridge = SecondaryNode('ridge', nodes_from=[node_lagged])\n",
-    "ridge_pipeline = Pipeline(node_ridge)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fit pipeline\n",
-    "ridge_pipeline.fit(train_input)\n",
-    "\n",
-    "# Predict. Pipeline return OutputData object \n",
-    "predicted_output = ridge_pipeline.predict(predict_input)\n",
-    "\n",
-    "# Convert forecasted values into one-dimensional array\n",
-    "forecast = np.ravel(np.array(predicted_output.predict))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_results(actual_time_series, predicted_values, len_train_data, y_name = 'Parameter'):\n",
-    "    \"\"\"\n",
-    "    Function for drawing plot with predictions\n",
-    "    \n",
-    "    :param actual_time_series: the entire array with one-dimensional data\n",
-    "    :param predicted_values: array with predicted values\n",
-    "    :param len_train_data: number of elements in the training sample\n",
-    "    :param y_name: name of the y axis\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    plt.plot(np.arange(0, len(actual_time_series)), \n",
-    "             actual_time_series, label = 'Actual values', c = 'green')\n",
-    "    plt.plot(np.arange(len_train_data, len_train_data + len(predicted_values)), \n",
-    "             predicted_values, label = 'Predicted', c = 'blue')\n",
-    "    # Plot black line which divide our array into train and test\n",
-    "    plt.plot([len_train_data, len_train_data],\n",
-    "             [min(actual_time_series), max(actual_time_series)], c = 'black', linewidth = 1)\n",
-    "    plt.ylabel(y_name, fontsize = 15)\n",
-    "    plt.xlabel('Time index', fontsize = 15)\n",
-    "    plt.legend(fontsize = 15)\n",
-    "    plt.grid()\n",
-    "    plt.show()"
-   ]
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
