file structure refactoring

--- a/report.ipynb
+++ b/report.ipynb
@@ -1,161 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Collects results MSE and R2 and create report"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>Температура_dinam_fact</th>\n",
-       "      <th>Лимфоциты#_dinam_fact</th>\n",
-       "      <th>АСТ_dinam_fact</th>\n",
-       "      <th>ЧСС_dinam_fact</th>\n",
-       "      <th>ЧДД_dinam_fact</th>\n",
-       "      <th>Билирубин общий_dinam_fact</th>\n",
-       "      <th>MPV- Средн.объем тромбоцитов_dinam_fact</th>\n",
-       "      <th>PCT- Тромбокрит_dinam_fact</th>\n",
-       "      <th>Лимфоциты%_dinam_fact</th>\n",
-       "      <th>снижение_сознания_dinam_fact</th>\n",
-       "      <th>Cтепень тяжести по КТ_dinam_fact</th>\n",
-       "      <th>Лактатдегидрогеназа_dinam_fact</th>\n",
-       "      <th>PDW- Индекс расп.по объему тр._dinam_fact</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>model</th>\n",
-       "      <th>metric</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">FEDOT</th>\n",
-       "      <th>MSE</th>\n",
-       "      <td>0.005887</td>\n",
-       "      <td>0.068599</td>\n",
-       "      <td>0.005626</td>\n",
-       "      <td>0.096556</td>\n",
-       "      <td>0.003257</td>\n",
-       "      <td>0.005009</td>\n",
-       "      <td>0.003507</td>\n",
-       "      <td>0.016625</td>\n",
-       "      <td>0.006252</td>\n",
-       "      <td>331.545768</td>\n",
-       "      <td>0.064115</td>\n",
-       "      <td>0.006649</td>\n",
-       "      <td>0.006480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>R2</th>\n",
-       "      <td>0.093196</td>\n",
-       "      <td>-23.451079</td>\n",
-       "      <td>0.214779</td>\n",
-       "      <td>-4.546862</td>\n",
-       "      <td>0.222628</td>\n",
-       "      <td>0.500426</td>\n",
-       "      <td>0.865307</td>\n",
-       "      <td>0.442597</td>\n",
-       "      <td>0.700656</td>\n",
-       "      <td>-5156.833390</td>\n",
-       "      <td>0.141584</td>\n",
-       "      <td>0.420863</td>\n",
-       "      <td>0.898274</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Температура_dinam_fact  Лимфоциты#_dinam_fact  АСТ_dinam_fact  \\\n",
-       "model metric                                                                  \n",
-       "FEDOT MSE                   0.005887               0.068599        0.005626   \n",
-       "      R2                    0.093196             -23.451079        0.214779   \n",
-       "\n",
-       "              ЧСС_dinam_fact  ЧДД_dinam_fact  Билирубин общий_dinam_fact  \\\n",
-       "model metric                                                               \n",
-       "FEDOT MSE           0.096556        0.003257                    0.005009   \n",
-       "      R2           -4.546862        0.222628                    0.500426   \n",
-       "\n",
-       "              MPV- Средн.объем тромбоцитов_dinam_fact  \\\n",
-       "model metric                                            \n",
-       "FEDOT MSE                                    0.003507   \n",
-       "      R2                                     0.865307   \n",
-       "\n",
-       "              PCT- Тромбокрит_dinam_fact  Лимфоциты%_dinam_fact  \\\n",
-       "model metric                                                      \n",
-       "FEDOT MSE                       0.016625               0.006252   \n",
-       "      R2                        0.442597               0.700656   \n",
-       "\n",
-       "              снижение_сознания_dinam_fact  Cтепень тяжести по КТ_dinam_fact  \\\n",
-       "model metric                                                                   \n",
-       "FEDOT MSE                       331.545768                          0.064115   \n",
-       "      R2                      -5156.833390                          0.141584   \n",
-       "\n",
-       "              Лактатдегидрогеназа_dinam_fact  \\\n",
-       "model metric                                   \n",
-       "FEDOT MSE                           0.006649   \n",
-       "      R2                            0.420863   \n",
-       "\n",
-       "              PDW- Индекс расп.по объему тр._dinam_fact  \n",
-       "model metric                                             \n",
-       "FEDOT MSE                                      0.006480  \n",
-       "      R2                                       0.898274  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"reports/fedot_7December.csv\")\n",
-    "df[\"model\"] = [\"FEDOT\", \"FEDOT\"]\n",
-    "df[\"metric\"] = df[\"Unnamed: 0\"]\n",
-    "df = df.drop(\"Unnamed: 0\", axis=1)\n",
-    "df = df.set_index([\"model\", \"metric\"])\n",
-    "df = df.sort_index()\n",
-    "df"
+    "import pandas as pd"
    ]
   },
   {
@@ -1066,98 +925,6 @@
     "    k = dfix\n",
     "df\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 44\u001b[0m\n\u001b[0;32m     41\u001b[0m     X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, test_size\u001b[39m=\u001b[39mtest_size)\n\u001b[0;32m     42\u001b[0m     \u001b[39mreturn\u001b[39;00m (X_train, y_train), (X_test, y_test)\n\u001b[1;32m---> 44\u001b[0m (X_train, y_train), (X_test, y_test) \u001b[39m=\u001b[39m prepare_data_with_dynamic_window(df, window\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     45\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTest train shapes:\u001b[39m\u001b[39m\"\u001b[39m, X_train\u001b[39m.\u001b[39mshape,\n\u001b[0;32m     46\u001b[0m X_test\u001b[39m.\u001b[39mshape)\n\u001b[0;32m     47\u001b[0m X_train \u001b[39m=\u001b[39m X_train\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m47\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pickle \n",
-    "\n",
-    "from sklearn.experimental import enable_iterative_imputer\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
-    "from sklearn.impute import IterativeImputer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score\n",
-    "\n",
-    "# Plots\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Prerocessing for FEDOT\n",
-    "from fedot.core.data.data import InputData\n",
-    "from fedot.core.repository.dataset_types import DataTypesEnum\n",
-    "from fedot.api.main import Fedot\n",
-    "from fedot.core.repository.tasks import Task, TaskTypesEnum, TsForecastingParams\n",
-    "\n",
-    "# FEDOT \n",
-    "from fedot.core.pipelines.pipeline import Pipeline\n",
-    "from fedot.core.pipelines.node import PrimaryNode, SecondaryNode\n",
-    "\n",
-    "def prepare_data_with_dynamic_window(df_input, window=1, test_size=0.2):\n",
-    "    X, y = [], []\n",
-    "    df = df_input.copy()\n",
-    "    df_grouped = df.groupby([\"case\"]).size()\n",
-    "    df_idx = df_grouped[df_grouped>=window+1].index\n",
-    "    for i in df_idx:\n",
-    "        for j in range(len(df.loc[(i)])-window):\n",
-    "            wind = df.loc[(i, j): (i, j+window-1)]\n",
-    "            X.append(wind.iloc[:, :47])\n",
-    "            y.append(df.loc[(i, j+window)].iloc[29:42])\n",
-    "    X, y = np.array(X, dtype=np.float32), np.array(y, dtype=np.float32)\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)\n",
-    "    return (X_train, y_train), (X_test, y_test)\n",
-    "\n",
-    "(X_train, y_train), (X_test, y_test) = prepare_data_with_dynamic_window(df, window=1)\n",
-    "print(\"Test train shapes:\", X_train.shape,\n",
-    "X_test.shape)\n",
-    "X_train = X_train.reshape(-1, 47)\n",
-    "X_test = X_test.reshape(-1, 47)\n",
-    "\n",
-    "dinam_fact_columns = df.columns[29:42]\n",
-    "scores = {}\n",
-    "for param_idx, param_name in enumerate(dinam_fact_columns):\n",
-    "    try:\n",
-    "        model = Fedot(\"regression\")\n",
-    "        model.load(f\"models\\\\7December\\\\fedot_regress_one_window_param_{param_idx}\\\\fedot_regress_one_window_param_{param_idx}.json\")\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        mask = ~np.isnan(y_test[:, param_idx])\n",
-    "        y_check = y_test[mask, param_idx] \n",
-    "        y_pred = y_pred[mask] \n",
-    "        scaler = MinMaxScaler()\n",
-    "\n",
-    "        scaler.fit(y_check.reshape(-1, 1))\n",
-    "        y_pred = scaler.transform(y_pred.reshape(-1, 1)).reshape(-1)\n",
-    "        y_check = scaler.transform(y_check.reshape(-1, 1)).reshape(-1)\n",
-    "        r2_res = r2_score(y_check, y_pred, multioutput=\"raw_values\")\n",
-    "        mse = mean_squared_error(y_check, y_pred)\n",
-    "        scores[param_name]=(mse, r2_res[0])\n",
-    "    except Exception as e:\n",
-    "        print(f\"FAILED {param_name} {e}\")\n",
-    "\n",
-    "df = pd.DataFrame(scores, index=[\"MSE\", \"R2\"], columns = dinam_fact_columns)\n",
-    "df.to_csv(\"reports/fedot_7December.csv\")"
-   ]
   }
  ],
  "metadata": {
@@ -1176,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
