Report tables are ready

--- a/ml_improved_window3.ipynb
+++ b/ml_improved_window3.ipynb
@@ -1210,7 +1210,7 @@
    "source": [
     "BATCH_SIZE=8\n",
     "\n",
-    "model = Sequential(name=\"6_LSTM13_Batch8\")\n",
+    "model = Sequential(name=\"LSTM13_Batch8\")\n",
     "model.add(Input((WINDOW, PARAMS_LENGTH), batch_size=BATCH_SIZE))\n",
     "model.add(LSTM(PARAMS_LENGTH, return_sequences=False))\n",
     "model.add(Dense(PARAMS_LENGTH, activation=\"linear\"))\n",
@@ -1382,7 +1382,7 @@
    "source": [
     "BATCH_SIZE=4\n",
     "\n",
-    "model = Sequential(name=\"6_LSTM13_Batch8\")\n",
+    "model = Sequential(name=\"LSTM13_Batch4\")\n",
     "model.add(Input((WINDOW, PARAMS_LENGTH), batch_size=BATCH_SIZE))\n",
     "model.add(LSTM(PARAMS_LENGTH, return_sequences=False))\n",
     "model.add(Dense(PARAMS_LENGTH, activation=\"linear\"))\n",
@@ -1554,7 +1554,7 @@
    "source": [
     "BATCH_SIZE=2\n",
     "\n",
-    "model = Sequential(name=\"6_LSTM13_Batch8\")\n",
+    "model = Sequential(name=\"LSTM13_Batch2\")\n",
     "model.add(Input((WINDOW, PARAMS_LENGTH), batch_size=BATCH_SIZE))\n",
     "model.add(LSTM(PARAMS_LENGTH, return_sequences=False))\n",
     "model.add(Dense(PARAMS_LENGTH, activation=\"linear\"))\n",
@@ -1726,7 +1726,7 @@
    "source": [
     "BATCH_SIZE=1\n",
     "\n",
-    "model = Sequential(name=\"6_LSTM13_Batch8\")\n",
+    "model = Sequential(name=\"LSTM13_Batch1\")\n",
     "model.add(Input((WINDOW, PARAMS_LENGTH), batch_size=BATCH_SIZE))\n",
     "model.add(LSTM(PARAMS_LENGTH, return_sequences=False))\n",
     "model.add(Dense(PARAMS_LENGTH, activation=\"linear\"))\n",
@@ -7296,7 +7296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
