Documentation: report ready

--- a/report.ipynb
+++ b/report.ipynb
@@ -4569,7 +4569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4623,11 +4623,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>снижение_сознания_dinam_fact</th>\n",
+       "      <td>2</td>\n",
+       "      <td>LSTM13_Batch4</td>\n",
+       "      <td>0.997207</td>\n",
+       "      <td>0.000108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Лимфоциты#_dinam_fact</th>\n",
        "      <td>3</td>\n",
        "      <td>LSTM64xLSTM32_Batch4</td>\n",
        "      <td>0.991304</td>\n",
        "      <td>0.000082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Лимфоциты%_dinam_fact</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GRU32xGRU32_Batch4</td>\n",
+       "      <td>0.754267</td>\n",
+       "      <td>0.005626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PDW- Индекс расп.по объему тр._dinam_fact</th>\n",
+       "      <td>4</td>\n",
+       "      <td>StaticDense_DynamicGRU_TwoLayersResult</td>\n",
+       "      <td>0.727560</td>\n",
+       "      <td>0.003408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MPV- Средн.объем тромбоцитов_dinam_fact</th>\n",
+       "      <td>3</td>\n",
+       "      <td>LSTM13_Batch8</td>\n",
+       "      <td>0.721695</td>\n",
+       "      <td>0.003346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>АСТ_dinam_fact</th>\n",
@@ -4644,18 +4672,11 @@
        "      <td>0.000103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Билирубин общий_dinam_fact</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Flatten3Layers</td>\n",
-       "      <td>0.397709</td>\n",
-       "      <td>0.001319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MPV- Средн.объем тромбоцитов_dinam_fact</th>\n",
+       "      <th>Лактатдегидрогеназа_dinam_fact</th>\n",
        "      <td>3</td>\n",
-       "      <td>LSTM13_Batch8</td>\n",
-       "      <td>0.721695</td>\n",
-       "      <td>0.003346</td>\n",
+       "      <td>LSTM64xLSTM32_Batch4</td>\n",
+       "      <td>0.499811</td>\n",
+       "      <td>0.000392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PCT- Тромбокрит_dinam_fact</th>\n",
@@ -4665,32 +4686,11 @@
        "      <td>0.004105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Лимфоциты%_dinam_fact</th>\n",
-       "      <td>4</td>\n",
-       "      <td>GRU32xGRU32_Batch4</td>\n",
-       "      <td>0.754267</td>\n",
-       "      <td>0.005626</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>снижение_сознания_dinam_fact</th>\n",
-       "      <td>2</td>\n",
-       "      <td>LSTM13_Batch4</td>\n",
-       "      <td>0.997207</td>\n",
-       "      <td>0.000108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Лактатдегидрогеназа_dinam_fact</th>\n",
-       "      <td>3</td>\n",
-       "      <td>LSTM64xLSTM32_Batch4</td>\n",
-       "      <td>0.499811</td>\n",
-       "      <td>0.000392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PDW- Индекс расп.по объему тр._dinam_fact</th>\n",
-       "      <td>4</td>\n",
-       "      <td>StaticDense_DynamicGRU_TwoLayersResult</td>\n",
-       "      <td>0.727560</td>\n",
-       "      <td>0.003408</td>\n",
+       "      <th>Билирубин общий_dinam_fact</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Flatten3Layers</td>\n",
+       "      <td>0.397709</td>\n",
+       "      <td>0.001319</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cтепень тяжести по КТ_dinam_fact</th>\n",
@@ -4705,46 +4705,46 @@
       ],
       "text/plain": [
        "                                           Окно  \\\n",
+       "снижение_сознания_dinam_fact                  2   \n",
        "Лимфоциты#_dinam_fact                         3   \n",
+       "Лимфоциты%_dinam_fact                         4   \n",
+       "PDW- Индекс расп.по объему тр._dinam_fact     4   \n",
+       "MPV- Средн.объем тромбоцитов_dinam_fact       3   \n",
        "АСТ_dinam_fact                                3   \n",
        "ЧДД_dinam_fact                                3   \n",
-       "Билирубин общий_dinam_fact                    1   \n",
-       "MPV- Средн.объем тромбоцитов_dinam_fact       3   \n",
-       "PCT- Тромбокрит_dinam_fact                    2   \n",
-       "Лимфоциты%_dinam_fact                         4   \n",
-       "снижение_сознания_dinam_fact                  2   \n",
        "Лактатдегидрогеназа_dinam_fact                3   \n",
-       "PDW- Индекс расп.по объему тр._dinam_fact     4   \n",
+       "PCT- Тромбокрит_dinam_fact                    2   \n",
+       "Билирубин общий_dinam_fact                    1   \n",
        "Cтепень тяжести по КТ_dinam_fact              4   \n",
        "\n",
        "                                                                           Модель  \\\n",
+       "снижение_сознания_dinam_fact                                        LSTM13_Batch4   \n",
        "Лимфоциты#_dinam_fact                                        LSTM64xLSTM32_Batch4   \n",
+       "Лимфоциты%_dinam_fact                                          GRU32xGRU32_Batch4   \n",
+       "PDW- Индекс расп.по объему тр._dinam_fact  StaticDense_DynamicGRU_TwoLayersResult   \n",
+       "MPV- Средн.объем тромбоцитов_dinam_fact                             LSTM13_Batch8   \n",
        "АСТ_dinam_fact                                                      LSTM13_Batch2   \n",
        "ЧДД_dinam_fact                                                      LSTM13_Batch1   \n",
-       "Билирубин общий_dinam_fact                                         Flatten3Layers   \n",
-       "MPV- Средн.объем тромбоцитов_dinam_fact                             LSTM13_Batch8   \n",
-       "PCT- Тромбокрит_dinam_fact                                     GRU32xGRU32_Batch4   \n",
-       "Лимфоциты%_dinam_fact                                          GRU32xGRU32_Batch4   \n",
-       "снижение_сознания_dinam_fact                                        LSTM13_Batch4   \n",
        "Лактатдегидрогеназа_dinam_fact                               LSTM64xLSTM32_Batch4   \n",
-       "PDW- Индекс расп.по объему тр._dinam_fact  StaticDense_DynamicGRU_TwoLayersResult   \n",
+       "PCT- Тромбокрит_dinam_fact                                     GRU32xGRU32_Batch4   \n",
+       "Билирубин общий_dinam_fact                                         Flatten3Layers   \n",
        "Cтепень тяжести по КТ_dinam_fact                                           LSTM32   \n",
        "\n",
        "                                                 R2       MSE  \n",
+       "снижение_сознания_dinam_fact               0.997207  0.000108  \n",
        "Лимфоциты#_dinam_fact                      0.991304  0.000082  \n",
+       "Лимфоциты%_dinam_fact                      0.754267  0.005626  \n",
+       "PDW- Индекс расп.по объему тр._dinam_fact  0.727560  0.003408  \n",
+       "MPV- Средн.объем тромбоцитов_dinam_fact    0.721695  0.003346  \n",
        "АСТ_dinam_fact                             0.701792  0.000217  \n",
        "ЧДД_dinam_fact                             0.634257  0.000103  \n",
-       "Билирубин общий_dinam_fact                 0.397709  0.001319  \n",
-       "MPV- Средн.объем тромбоцитов_dinam_fact    0.721695  0.003346  \n",
-       "PCT- Тромбокрит_dinam_fact                 0.449788  0.004105  \n",
-       "Лимфоциты%_dinam_fact                      0.754267  0.005626  \n",
-       "снижение_сознания_dinam_fact               0.997207  0.000108  \n",
        "Лактатдегидрогеназа_dinam_fact             0.499811  0.000392  \n",
-       "PDW- Индекс расп.по объему тр._dinam_fact  0.727560  0.003408  \n",
+       "PCT- Тромбокрит_dinam_fact                 0.449788  0.004105  \n",
+       "Билирубин общий_dinam_fact                 0.397709  0.001319  \n",
        "Cтепень тяжести по КТ_dinam_fact           0.200391  0.031859  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4760,7 +4760,9 @@
     "            if (params[p][2] < dfx.loc[p][\"R2\"]):\n",
     "                params[p] = [win, dfx.loc[p][\"Модель\"], dfx.loc[p][\"R2\"], dfx.loc[p][\"MSE\"]]\n",
     "                \n",
-    "pd.DataFrame(params.values(), columns=[\"Окно\", *dfx.columns], index=params.keys())"
+    "result = pd.DataFrame(params.values(), columns=[\"Окно\", *dfx.columns], index=params.keys())\n",
+    "result = result.sort_values(\"R2\", ascending=False)\n",
+    "result"
    ]
   }
  ],
