--- a/fedot.ipynb
+++ b/fedot.ipynb
@@ -4551,9 +4551,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "129ac671-fa6e-4164-8f02-062c11406739",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "resultdf = pd.concat(metrics_saved)\n",
